--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,7 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 
 RewriteRule ^([^/.]+)$ $1.php [L]
+RewriteRule ^api/(.*)$ api.php?endpoint=$1 [QSA,L]
 
 <FilesMatch "\.(jpg|jpeg|png|gif|svg|webp)$">
     Header set Cache-Control "no-cache, no-store, must-revalidate"
