--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,16 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 
 RewriteRule ^([^/.]+)$ $1.php [L]
-RewriteRule ^api/(.*)$ api?endpoint=$1 [QSA,L]
+RewriteRule ^api/(.*)$ api.php?endpoint=$1 [QSA,L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^uploads/(.*)$ img/$1.jpg [L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^uploads/(.*)$ img/$1.png [L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^uploads/(.*)$ uploads/$1.svg [L]
 
 <FilesMatch "\.(jpg|jpeg|png|gif|svg|webp)$">
     Header set Cache-Control "no-cache, no-store, must-revalidate"
