--- a/.github/workflows/deploys.yml
+++ b/.github/workflows/deploys.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Upload via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v3
+      - name: Deploy to FTP
+        uses: sebastienlorber/ftp-deploy-action@v1
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
