--- a/.github/workflows/deploys.yml
+++ b/.github/workflows/deploys.yml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   ftp-deploy:
-    name: FTP Deploy
+    name: Deploy website on push
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Deploy to FTP
-        uses: sebastienlorber/ftp-deploy-action@v1
+      - name: Sync files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
